Bug 15975 - source3/libads/kerberos.c sets wrong failure for negative connection cache
Summary: source3/libads/kerberos.c sets wrong failure for negative connection cache
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-21 10:32 UTC by Andreas Schneider
Modified: 2026-02-23 20:07 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.24 (1.17 KB, patch)
2026-02-06 11:00 UTC, Andreas Schneider
pfilipensky: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2026-01-21 10:32:16 UTC
source3/libads/kerberos.c sets wrong failure for negative connection cache. Need bug for 4.23.
Comment 1 Samba QA Contact 2026-01-21 11:39:03 UTC
This bug was referenced in samba master:

9e1bcf84d8a8386fb00aedf88e71b28504e449b4
Comment 2 Andreas Schneider 2026-02-06 11:00:48 UTC
Created attachment 18834 [details]
patch for 4.24
Comment 3 Pavel Filipenský 2026-02-06 11:05:08 UTC
patch LGTM
Comment 4 Björn Jacke 2026-02-06 11:08:35 UTC
Andreas, 4.23 is not affected (you mentioned it in comment 0)?
Comment 5 Andreas Schneider 2026-02-07 08:34:35 UTC
I meant 4.24. It is only there. Thanks for asking Björn.
Comment 6 Samba QA Contact 2026-02-07 16:15:11 UTC
This bug was referenced in samba v4-24-test:

0a6726fb83466f750a66aa41b2c304e592522864
Comment 7 Samba QA Contact 2026-02-23 20:07:11 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.0rc3):

0a6726fb83466f750a66aa41b2c304e592522864